Se añade como inicio una pagina 'en blanco', ya se inicia sesión y se registra usuario

--- a/src/app/components/login-card/login-card.component.html
+++ b/src/app/components/login-card/login-card.component.html
@@ -66,9 +66,9 @@
     <div class="row position-relative">
       <div class="col-md-12 mt-2">
         <button *ngIf="!this.valideLogin.valid" 
-                class="btn btn-primary m-2 col-md-2" 
+                class="btn btn-primary m-2 col-md-5" 
                 (click)="goToRegister()">
-                Registrar
+                Nuevo usuario
               </button>
       </div>
     </div>
