--- a/src/app/components/register-card/register-card.component.html
+++ b/src/app/components/register-card/register-card.component.html
@@ -16,8 +16,7 @@
           (ngSubmit)="this.sendRegister()" 
           name="formRegister">
       <div class="col-md-6">
-        <label for="name" 
-              class="form-label">Nombre</label>
+        <label for="name" class="form-label">Nombre</label>
         <input
               type="text"
               class="form-control"
@@ -30,8 +29,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <label for="lastName" 
-              class="form-label">Apellidos</label>
+        <label for="lastName" class="form-label">Apellidos</label>
         <input type="text" 
               class="form-control" 
               name="lastName"
@@ -44,7 +42,12 @@
       </div>
       <div class="col-md-6">
         <label for="phone" class="form-label">Teléfono</label>
-        <input type="number" class="form-control" name="phone" formControlName="phone" placeholder="Télefono" required>
+        <input type="number" 
+              class="form-control" 
+              name="phone" 
+              formControlName="phone" 
+              placeholder="Télefono" 
+              required>
         <div class="valid-feedback">
           Looks good!
         </div>
@@ -53,7 +56,12 @@
         <label for="email" class="form-label">Dirección de correo</label>
         <div class="input-group has-validation">
           <span class="input-group-text" id="email">@</span>
-          <input type="text" class="form-control" name="email" formControlName="email" placeholder="micorreo@dominio.com" required>
+          <input type="text" 
+                class="form-control" 
+                name="email" 
+                formControlName="email" 
+                placeholder="micorreo@dominio.com" 
+                required value="Jorge@j">
           <div class="invalid-feedback">
             Please choose a username.
           </div>
@@ -61,14 +69,20 @@
       </div>
       <div class="col-md-12">
         <label for="address" class="form-label">Dirección</label>
-        <input type="text" class="form-control" name="address" placeholder="C/ de la Providencia, n 7 3º">
+        <input type="text" 
+              class="form-control" 
+              name="address" 
+              placeholder="C/ de la Providencia, n 7 3º">
         <div class="invalid-feedback">
           Please provide a valid city.
         </div>
       </div>
       <div class="col-md-4">
         <label for="city" class="form-label">Ciudad</label>
-        <input type="text" class="form-control" name="city" placeholder="Madrid">
+        <input type="text" 
+              class="form-control" 
+              name="city" 
+              placeholder="Madrid">
         <div class="invalid-feedback">
           Please provide a valid city.
         </div>
@@ -138,14 +152,24 @@
       </div>
       <div class="col-md-7">
         <label for="password" class="form-label">Contraseña</label>
-        <input type="text" class="form-control" name="password" formControlName="password" placeholder="Debes usar mínimo 8 caracteres" required>
+        <input type="text" 
+        class="form-control" 
+        name="password" 
+        formControlName="password" 
+        placeholder="Debes usar mínimo 8 caracteres" 
+        required>
         <div class="invalid-feedback">
           Please provide a valid zip.
         </div>
       </div>
       <div class="col-md-7">
         <label for="rePassword" class="form-label">Repite la contraseña</label>
-        <input type="text" class="form-control" name="rePassword" formControlName="rePassword" placeholder="Por favor, repite la contraseña" required>
+        <input type="text" 
+        class="form-control" 
+        name="rePassword" 
+        formControlName="rePassword" 
+        placeholder="Por favor, repite la contraseña" 
+        required>
         <div class="invalid-feedback">
           Please provide a valid zip.
         </div>
