--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -7,6 +7,7 @@ html,body{
 body{
   background-image: url(../../../assets/images/imgRegister.jpg) ;
   background-position: center;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
