--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,16 +16,17 @@
           <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
             <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
           </a>
-            <ul class="nav  me-lg-auto my-2 justify-content-center ">
+
+          <div class="col-lg-3 me-lg-auto text-primary">
+            <h1><em><strong>RUNNERS</strong></em></h1>
+          </div>
+
+            <ul class="nav me-lg-auto my-6 justify-content-center ">
               <li><a href="./home" class="nav-link px-2 text-info">Inicio</a></li>
               <li><a href="./home" class="nav-link px-2 text-black">Caracteristicas</a></li>
               <li><a href="./home" class="nav-link px-2 text-black">FAQs</a></li>
               <li><a href="./home" class="nav-link px-2 text-black">Sobre mi</a></li>
             </ul>
-
-            <div class="col-lg-auto me-lg-auto text-primary">
-              <h1><em><strong>RUNNERS</strong></em></h1>
-            </div>
 
             <div class="text-end row col-md-4">
               <div *ngIf="this.getIsUserLogIn()">
@@ -39,12 +40,33 @@
           </div>
         </div>
     </header>
-
-    <!--Formulario de registro-->
-    <main class="mt-5 mb-5 ">
+    <main class="mt-5 mb-5">
       <div class="row d-flex justify-content-center">
           <div class="col-8 col-sm-4 d-flex justify-content-center align-items-center">
+            <div class="card rounded shadow-lg p-2" style="width: 38rem;">
+              <img src="../../../assets/images/iconRunning.png" class="card-img-top " alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Bienvenido:</h5>
+                <p class="card-text"><strong>{{this.getInfoUserValue(0)}}</strong></p>
+                <label for="class label">A continuación, podrás ver la información con la cual te has registrado:</label>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Usuario: <strong>{{this.getInfoUserValue(3)}}</strong></li>
+                <li class="list-group-item">Nombre completo: <strong>{{this.getInfoUserValue(0)}}, {{this.getInfoUserValue(1)}}</strong></li>
+                <li class="list-group-item">Teléfono: <strong>{{this.getInfoUserValue(2)}}</strong></li>
+                <li class="list-group-item">Dirección: <strong>{{this.getInfoUserValue(4)}}, {{this.getInfoUserValue(5)}}, {{this.getInfoUserValue(6)}}</strong></li>
+                <li class="list-group-item">La contraseña: <strong>Solo tú sabes cual es</strong></li>
+              </ul>
+              <div class="card-body">
+                <ul>
+                  <li><a href="https://s1.1zoom.me/big3/434/Men_Fitness_running_456888.jpg" target="blank" class="card-link">Imagen de /start</a></li>
+                  <li><a href="https://static4.abc.es/media/bienestar/2020/04/29/salir-correr-2-mayo-3-kC3B--620x349@abc.jpg" target="blank" class="card-link">Imagen de /Home</a></li>
+                  <li><a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fes.99designs.com%2Ficon-button-design%2Fcontests%2Fdesign-ios-app-icon-portraying-runner-motion-367686&psig=AOvVaw1OZbm-8eyuLslhpSTscFII&ust=1635359513829000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCNjX1KLb6PMCFQAAAAAdAAAAABAK" target="blank">Imagen del icono</a></li>
+                </ul>
 
+
+              </div>
+            </div>
           </div>
       </div>
   </main>
