--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,46 +4,114 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Inicio</title>
+      <title>Home</title>
 
   </head>
-  <body class="bg-success p-2 text-dark bg-opacity-10">
 
-    <!--Encabezado-->
+  <body class="bg-success p-2 text-dark bg-opacity-10">
     <header class="p-4 bg-white text-black shadow-lg rounded ">
       <div class="container col-md-12">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
           <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-            <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
+            <svg class="bi me-2"
+                width="40"
+                height="32"
+                role="img"
+                aria-label="Bootstrap"><use xlink:href="#bootstrap"/>
+            </svg>
           </a>
-
           <div class="col-lg-3 me-lg-auto text-primary">
             <h1><em><strong>RUNNERS</strong></em></h1>
           </div>
-
-            <ul class="nav me-lg-auto my-6 justify-content-center ">
-              <li><a href="./home" class="nav-link px-2 text-info">Inicio</a></li>
-              <li><a href="./home" class="nav-link px-2 text-black">Caracteristicas</a></li>
-              <li><a href="./home" class="nav-link px-2 text-black">FAQs</a></li>
-              <li><a href="./home" class="nav-link px-2 text-black">Sobre mi</a></li>
-            </ul>
-
-            <div class="text-end row col-md-4">
-              <div *ngIf="this.getIsUserLogIn()">
-                <button type="button"
+            <div class="row">
+              <ul class="nav col-md-12 justify-content-center">
+                <li class="m-2">
+                    <div class="dropdown m-2">
+                    <label class="form-label dropdown-toggle"
+                          type="button"
+                          id="dropdownMenuButton1"
+                          data-bs-toggle="dropdown">
+                      Características
+                    </label>
+                    <ul class="dropdown-menu dropdown-menu-start"
+                        aria-labelledby="dropdownMenuButton1">
+                      <li>Ej01 M11 Servicios y procesos</li>
+                      <li>Software empleado:</li>
+                      <ul>
+                        <li>Angular 12.2.11</li>
+                        <li>Bootstrap 5.1</li>
+                      </ul>
+                    </ul>
+                  </div>
+                </li>
+                <li class="m-2">
+                  <div class="dropdown m-2">
+                    <label class="form-label dropdown-toggle"
+                          type="button"
+                          id="dropdownMenuButton2"
+                          data-bs-toggle="dropdown">
+                      FAQs
+                    </label>
+                    <ul class="dropdown-menu dropdown-menu-start"
+                        aria-labelledby="dropdownMenuButton2">
+                      <li>
+                        <a href="https://angular.io/"
+                          target="blank"
+                          style="text-decoration: none;">
+                          ¿Que es Angular?
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://getbootstrap.com/"
+                          target="blank"
+                          style="text-decoration: none;">
+                          ¿Que es Bootstrap?
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://www.cevonline.es/"
+                          target="blank"
+                          style="text-decoration: none;">
+                          ¿Que es CEV Online?
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="m-2">
+                  <div class="dropdown m-2">
+                    <label class="form-label dropdown-toggle"
+                          type="button"
+                          id="dropdownMenuButton3"
+                          data-bs-toggle="dropdown">
+                      Sobre mi
+                    </label>
+                    <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="dropdownMenuButton3">
+                      <li><h6>Jorge Agulló Martín</h6></li>
+                      <li>Ciclo: 2º TS DAM</li>
+                      <li><a href="https://github.com/JorgeAgulloM">Mi GitHub</a></li>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
+            </div>
+              <div class="text-end row col-md-4">
+                <div *ngIf="this.getIsUserLogIn()">
+                  <button type="button"
                         class="btn btn-warning me-2"
-                        (click)="this.closeSession()">
-                        Cerrar sesión
-                </button>
-            </div>
-            </div>
+                        (click)="this.closeSession()">Cerrar sesión
+                  </button>
+                </div>
+              </div>
           </div>
         </div>
     </header>
+
     <main class="mt-5 mb-5">
       <div class="row d-flex justify-content-center">
           <div class="col-8 col-sm-4 d-flex justify-content-center align-items-center">
-            <div class="card rounded shadow-lg p-2" style="width: 38rem;">
+            <div class="card rounded shadow-lg p-2"
+                style="width: 38rem;">
               <img src="../../../assets/images/iconRunning.png" class="card-img-top " alt="...">
               <div class="card-body">
                 <h5 class="card-title">Bienvenido:</h5>
@@ -51,24 +119,40 @@
                 <label for="class label">A continuación, podrás ver la información con la cual te has registrado:</label>
               </div>
               <ul class="list-group list-group-flush">
-                <li class="list-group-item">Usuario: <strong>{{this.getInfoUserValue(3)}}</strong></li>
+                <li class="list-group-item">Usuario/e-mail: <strong>{{this.getInfoUserValue(3)}}</strong></li>
                 <li class="list-group-item">Nombre completo: <strong>{{this.getInfoUserValue(0)}}, {{this.getInfoUserValue(1)}}</strong></li>
                 <li class="list-group-item">Teléfono: <strong>{{this.getInfoUserValue(2)}}</strong></li>
                 <li class="list-group-item">Dirección: <strong>{{this.getInfoUserValue(4)}}, {{this.getInfoUserValue(5)}}, {{this.getInfoUserValue(6)}}</strong></li>
                 <li class="list-group-item">La contraseña: <strong>Solo tú sabes cual es</strong></li>
               </ul>
               <div class="card-body">
+                <label for="form-label">Referencias de las imagenes utilizadas</label>
                 <ul>
-                  <li><a href="https://s1.1zoom.me/big3/434/Men_Fitness_running_456888.jpg" target="blank" class="card-link">Imagen de /start</a></li>
-                  <li><a href="https://static4.abc.es/media/bienestar/2020/04/29/salir-correr-2-mayo-3-kC3B--620x349@abc.jpg" target="blank" class="card-link">Imagen de /Home</a></li>
-                  <li><a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fes.99designs.com%2Ficon-button-design%2Fcontests%2Fdesign-ios-app-icon-portraying-runner-motion-367686&psig=AOvVaw1OZbm-8eyuLslhpSTscFII&ust=1635359513829000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCNjX1KLb6PMCFQAAAAAdAAAAABAK" target="blank">Imagen del icono</a></li>
+                  <li>
+                    <a href="https://s1.1zoom.me/big3/434/Men_Fitness_running_456888.jpg"
+                      target="blank"
+                      class="card-link"
+                      style="text-decoration: none;">Imagen de /start
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://static4.abc.es/media/bienestar/2020/04/29/salir-correr-2-mayo-3-kC3B--620x349@abc.jpg"
+                      target="blank"
+                      class="card-link"
+                      style="text-decoration: none;">Imagen de /Home
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fes.99designs.com%2Ficon-button-design%2Fcontests%2Fdesign-ios-app-icon-portraying-runner-motion-367686&psig=AOvVaw1OZbm-8eyuLslhpSTscFII&ust=1635359513829000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCNjX1KLb6PMCFQAAAAAdAAAAABAK"
+                      target="blank"
+                      style="text-decoration: none;">Imagen del icono
+                    </a>
+                  </li>
                 </ul>
-
-
               </div>
             </div>
           </div>
       </div>
-  </main>
+    </main>
   </body>
 </html>
